common: Fix crashes for incomplete locales

By ignoring locales without language codes, or territory.

https://bugzilla.gnome.org/show_bug.cgi?id=658551